--- a/index.html
+++ b/index.html
@@ -99,47 +99,44 @@
 						<h2>The tools used</h2>
 						<p>The development of this installation was impossible without tools such as :</p>
 					</header>
-					<div class="flex flex-2">
+					<div class="flex flex-3">
 						<article>
 							<div class="image fit">
-								<img src="images/pic01.jpg" alt="Pic 01" />
+								<a href="https://www.leapmotion.com/">
+									<img src="./images/leap-logo.png" alt="Pic 01" />
+								</a>
 							</div>
 							<header>
-								<h3>Leap Motion Device</h3>
+								<h3>Leap Motion</h3>
 							</header>
 							<p>Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor lorem ipsum.</p>
-							<footer>
-								<a href="#" class="button special">More</a>
-							</footer>
 						</article>
 						<article>
 							<div class="image fit">
-								<img src="images/pic02.jpg" alt="Pic 02" />
+								<a href="http://openframeworks.cc/">
+									<img src="./images/of-logo.png" alt="Pic 01" />
+								</a>
 							</div>
 							<header>
-								<h3>OpenFrameworks</h3>
+							<a href="http://openframeworks.cc/">
+									<h3>OpenFrameworks</h3>
+								</a>
+								
 							</header>
-							<p>Sed adipiscing ornare risus. Morbi est est, blandit sit amet, sagittis vel, euismod vel, velit. Pellentesque egestas sem. Suspendisse commodo ullamcorper magna non comodo sodales tempus.</p>
-							<footer>
-								<a href="#" class="button special">More</a>
-							</footer>
+							<p>Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor lorem ipsum.</p>
 						</article>
-					</div>
-					<div class="flex flex-2">
 						<article>
 							<div class="image fit">
-								<img src="images/pic01.jpg" alt="Pic 01" />
+								<a href="https://www.ableton.com/">
+									<img src="./images/ableton-logo.png" alt="Pic 01" />
+								</a>
 							</div>
 							<header>
 								<h3>Ableton Live</h3>
 							</header>
-							<p>Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor lorem ipsum.</p>
-							<footer>
-								<a href="#" class="button special">More</a>
-							</footer>
+							<p>Sed adipiscing ornare risus. Morbi est est, blandit sit amet, sagittis vel, euismod vel, velit. Pellentesque egestas sem. Suspendisse commodo ullamcorper magna non comodo sodales tempus.</p>
 						</article>
 					</div>
-				</div>
 			</section>
 
 			<section id="four" class="wrapper style1">
