--- a/index.html
+++ b/index.html
@@ -10,30 +10,49 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet"> 
+		<link href="https://fonts.googleapis.com/css?family=Londrina+Outline" rel="stylesheet"> 
+		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
 	</head>
 	<body>
 
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="index.html" class="logo">Interactive Delaunay</a>
 					<nav id="nav">
-						<a href="index.html">Home</a>
-						<a href="generic.html">Generic</a>
-						<a href="elements.html">Elements</a>
+						<a href="#banner">Home</a>
+						<a href="#first">Discover</a>
+						<a href="#one">The concept</a>
+						<a href="#two">Schematics</a>
+						<a href="#four">Team</a>
 					</nav>
 					<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 				</div>
 			</header>
+			
 
 		<!-- Banner -->
 			<section id="banner">
 				<h1>Interactive Delaunay</h1>
-				<p>An installation exploring the link between interaction between human, sound and visual</p>
+				<p class="special">An installation exploring the link between human interaction, sound and visual</p>
 			</section>
 
 		<!-- One -->
-			<section id="one" class="wrapper special">
+			<section id="first" class="wrapper style1">
+				<div class="inner">
+					<header>
+						<h2>Discover</h2>
+					</header>
+					<div class="flex flex-3">
+						<div class="video__wrapper special">
+							<iframe class="video" src="https://player.vimeo.com/video/119972062?color=ff0179&title=0&byline=0&portrait=0" width="960" height="540" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+						</div>
+					</div>
+				</div>
+			</section>
+
+
+			<section id="one" class="wrapper">
 				<div class="inner">
 					<header>
 						<h2>The concept</h2>
@@ -42,19 +61,19 @@
 					
 						<article>
 							<header>
-								<h3>Reinterpreting Delaunay's Work<br /></h3>
+								<h3>Discovering<br /></h3>
 							</header>
 							<p>First we wanted to give a new breath to abstract french painter's Robert & Sonia Delaunay.<br /> <br />Giving an idea of what they could have done with nowadays tools such as the Leap Motion.</p>						
 						</article>
 						<article>
 							<header>
-								<h3>The dreams / <br />The mind of the artist</h3>
+								<h3>Creating</h3>
 							</header>
 							<p>Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna a ullamcorper laoreet, lectus arcu.</p>					
 						</article>
 						<article>
 							<header>
-								<h3>A new way to educate / <br/>A teamwork</h3>
+								<h3>Learning</h3>
 							</header>
 							<p>We hope to give to the audience curiosity with tools that they don't necesseraly know and be part of the creation of Delaunay's.</p>
 						</article>
@@ -63,7 +82,7 @@
 			</section>
 
 		<!-- Two -->
-		<section id="two" class="wrapper special style1">
+		<section id="two" class="wrapper style1">
 			<div class="inner">
 					<header>
 						<h2>Schematics</h2>
@@ -74,9 +93,9 @@
 
 
 		<!-- Three -->
-			<section id="three" class="wrapper special">
+			<section id="three" class="wrapper">
 				<div class="inner">
-					<header class="align-center">
+					<header>
 						<h2>Nunc Dignissim</h2>
 						<p>Aliquam erat volutpat nam dui </p>
 					</header>
@@ -109,7 +128,7 @@
 				</div>
 			</section>
 
-			<section id="four" class="wrapper style1 special">
+			<section id="four" class="wrapper style1">
 				<div class="inner">
 					<header>
 						<h2>The team</h2>
