--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 			<section id="three" class="wrapper">
 				<div class="inner">
 					<header>
-						<h2>Nunc Dignissim</h2>
-						<p>Aliquam erat volutpat nam dui </p>
+						<h2>The tools used</h2>
+						<p>The development of this installation was impossible without tools such as :</p>
 					</header>
 					<div class="flex flex-2">
 						<article>
@@ -105,7 +105,7 @@
 								<img src="images/pic01.jpg" alt="Pic 01" />
 							</div>
 							<header>
-								<h3>Praesent placerat magna</h3>
+								<h3>Leap Motion Device</h3>
 							</header>
 							<p>Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor lorem ipsum.</p>
 							<footer>
@@ -117,9 +117,23 @@
 								<img src="images/pic02.jpg" alt="Pic 02" />
 							</div>
 							<header>
-								<h3>Fusce pellentesque tempus</h3>
+								<h3>OpenFrameworks</h3>
 							</header>
 							<p>Sed adipiscing ornare risus. Morbi est est, blandit sit amet, sagittis vel, euismod vel, velit. Pellentesque egestas sem. Suspendisse commodo ullamcorper magna non comodo sodales tempus.</p>
+							<footer>
+								<a href="#" class="button special">More</a>
+							</footer>
+						</article>
+					</div>
+					<div class="flex flex-2">
+						<article>
+							<div class="image fit">
+								<img src="images/pic01.jpg" alt="Pic 01" />
+							</div>
+							<header>
+								<h3>Ableton Live</h3>
+							</header>
+							<p>Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor lorem ipsum.</p>
 							<footer>
 								<a href="#" class="button special">More</a>
 							</footer>
