--- a/index.html
+++ b/index.html
@@ -91,11 +91,14 @@
 					</header>
 					<div class="flex flex-2">
 						<article>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam 
-						Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam 
-						Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam 
-						Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam 
-						Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam </p>
+						<p> We have developped a program in C++ using openFrameworks that communicates with Ableton and the Leapmotion* and that displays shapes whith colors, movements and effects and broadcasts music. <p>
+
+						<p><span class="white">Step 1 - SETUP and SLEEP MODE</span></br>
+						The basic shapes and music of each sequence, that we call 'state of mind', are loaded. Shapes and their colors are gathered via SVGs and music via MIDI. For each state of mind, we have defined specific actions and their results, as well as physics for the movements. Once everything is setup, we project the visual and broacast the sound. When there are no actions from the user, our installation is in sleep mode. </p>
+
+						<p><span class="white">Step 2 - INTERCTIONS</span><br>
+						When a user places his hands over the leapmotion, it wakes our installation up. Each gesture is mapped with a specific reaction, both on the shapes (colors, movement, ...) and on music (filters, note or noise addition, ...). Therefore, when a gesture is detected, their is a direct response! </p>
+
 						</article>
 						<article>
 							<div class="image fit">
@@ -125,7 +128,7 @@
 							<header>
 								<h3>Leap Motion</h3>
 							</header>
-							<p>Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor lorem ipsum.</p>
+							<p>The Leap Motion controller is a small USB peripheral device which is designed to be placed on a physical desktop, facing upward, and which detects hand and fingers movements.</p>
 						</article>
 						<article>
 							<div class="image fit">
@@ -135,11 +138,11 @@
 							</div>
 							<header>
 							<a href="http://openframeworks.cc/">
-									<h3>OpenFrameworks</h3>
+									<h3>openFrameworks</h3>
 								</a>
 								
 							</header>
-							<p>Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor lorem ipsum.</p>
+							<p> openFrameworks is an open source toolkit designed for "creative coding". It is written in C++ and built on top of OpenGL.</p>
 						</article>
 						<article>
 							<div class="image fit">
@@ -150,7 +153,7 @@
 							<header>
 								<h3>Ableton Live</h3>
 							</header>
-							<p>Sed adipiscing ornare risus. Morbi est est, blandit sit amet, sagittis vel, euismod vel, velit. Pellentesque egestas sem. Suspendisse commodo ullamcorper magna non comodo sodales tempus.</p>
+							<p>Ableton Live is a software music sequencer and digital audio workstation for macOS and Windows. </p>
 						</article>
 					</div>
 			</section>
