--- a/index.html
+++ b/index.html
@@ -170,28 +170,28 @@
 								<img src="images/pic03.jpg" alt="Person 1" />
 							</div>
 							<h3>Maël Crespin</h3>
-							<p>Cipdum dolor</p>
+							<p>Developper</p>
 						</div>
 						<div class="box person">
 							<div class="image round">
 								<img src="images/pic04.jpg" alt="Person 2" />
 							</div>
 							<h3>Julie Puech</h3>
-							<p>Vestibulum comm</p>
+							<p>Artistic Director</p>
 						</div>
 						<div class="box person">
 							<div class="image round">
 								<img src="images/pic05.jpg" alt="Person 3" />
 							</div>
 							<h3>Antoine Demière</h3>
-							<p>Fusce pellentes</p>
+							<p>Developper</p>
 						</div>
 						<div class="box person">
 							<div class="image round">
 								<img src="images/baptiste.jpg" alt="Person 4" />
 							</div>
 							<h3>Baptiste Olivier</h3>
-							<p>Praesent placer</p>
+							<p>Sound designer/composer</p>
 						</div>
 					</div>
 				</div>
@@ -202,6 +202,7 @@
 				<div class="inner">
 					<div class="flex">
 						<ul class="icons special">
+							<li><a href="https://github.com/datross/shapes" class="icon fa-github"><span class="label">Github</span></a></li>
 							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon fa-linkedin"><span class="label">linkedIn</span></a></li>
