--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@
 								</a>
 							</div>
 							<header>
-								<h3>Leap Motion</h3>
+								<a href="https://www.leapmotion.com/">
+									<h3>Leap Motion</h3>
+								</a>								
 							</header>
 							<p>Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor lorem ipsum.</p>
 						</article>
@@ -132,7 +134,10 @@
 								</a>
 							</div>
 							<header>
-								<h3>Ableton Live</h3>
+								<a href="https://www.ableton.com/">
+										<h3>Ableton Live</h3>
+									</a>
+								
 							</header>
 							<p>Sed adipiscing ornare risus. Morbi est est, blandit sit amet, sagittis vel, euismod vel, velit. Pellentesque egestas sem. Suspendisse commodo ullamcorper magna non comodo sodales tempus.</p>
 						</article>
@@ -169,9 +174,14 @@
 						</div>
 						<div class="box person">
 							<div class="image round">
-								<img src="images/baptiste.jpg" alt="Person 4" />
+								<a href="https://www.linkedin.com/in/baptiste-olivier-27094bb3/">
+									<img src="images/baptiste.jpg" alt="Baptiste Olivier" />
+								</a>
+								
 							</div>
-							<h3>Baptiste Olivier</h3>
+							<a href="https://www.linkedin.com/in/baptiste-olivier-27094bb3/">
+									<h3> Baptiste Olivier </h3>
+								</a>
 							<p>Praesent placer</p>
 						</div>
 					</div>
