--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Interactive Delaunay</title>
+		<title>Delaunay's Interactive Dreams</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -33,7 +33,7 @@
 
 		<!-- Banner -->
 			<section id="banner">
-				<h1>Interactive Delaunay</h1>
+				<h1>Delaunay's Dreams</h1>
 				<p class="special">An installation exploring the link between human interaction, sound and visual</p>
 			</section>
 
@@ -190,6 +190,12 @@
 							</div>
 							<h3>Antoine Demière</h3>
 							<p>Developper</p>
+							<div class="flex">
+								<ul class="icons special">
+									<li><a href="https://github.com/datross/shapes" class="icon fa-github"><span class="label">Github</span></a></li>
+									<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+								</ul>
+							</div>
 						</div>
 						<div class="box person">
 							<div class="image round">
@@ -220,6 +226,7 @@
 							<li><a href="#" class="icon fa-linkedin"><span class="label">linkedIn</span></a></li>
 							<li><a href="#" class="icon fa-pinterest-p"><span class="label">Pinterest</span></a></li>
 							<li><a href="#" class="icon fa-vimeo"><span class="label">Vimeo</span></a></li>
+							<li><a href="#" class="icon fa-envelope-o"><span class="label">delaunayinteractivedreams@gmail.com</span></a></li>
 						</ul>
 					</div>
 				</div>
